k8s/spring-boot-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-app-ingress
spec:
  rules:
  - host: iraianbu.department.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: spring-boot-app-service
            port:
              number: 8080
